--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js",
     "build:analy": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.analy.js",
     "eslint": "eslint src/**/*.{ts,tsx}",
-    "pre-check": "tsc && npx lint-staged",
+    "pre-check": "npx lint-staged",
     "postinstall": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/cssinjs": "^1.10.1",
     "antd": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
