--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lint-staged": "^12.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.1",
+    "prettier": "^2.8.8",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.3",
     "thread-loader": "^4.0.2",
